[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/bg2.png" type="Texture" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/icon.png" type="Texture" id=3]
[ext_resource path="res://assets/credits.ogg" type="AudioStream" id=4]
[ext_resource path="res://scenes/scripts/Menu.gd" type="Script" id=5]
[ext_resource path="res://assets/skill-desc_0003_bg.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
corner_detail = 1

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/BULKYPIX.TTF"

[sub_resource type="DynamicFont" id=3]
size = 41
use_mipmaps = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
use_mipmaps = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 14
use_mipmaps = true
font_data = SubResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 368.0
margin_top = 245.0
margin_right = 640.0
margin_bottom = 352.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_right = 272.0
margin_bottom = 107.0

[node name="VBoxIcon" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 65.0
margin_bottom = 107.0

[node name="Icon" type="TextureRect" parent="CenterContainer/HBoxContainer/VBoxIcon"]
margin_right = 65.0
margin_bottom = 32.0
texture = ExtResource( 3 )
stretch_mode = 3
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty1" type="MarginContainer" parent="CenterContainer/HBoxContainer/VBoxIcon"]
margin_top = 36.0
margin_right = 65.0
margin_bottom = 68.0
custom_constants/margin_right = 0
custom_constants/margin_top = 32
custom_constants/margin_left = 0

[node name="Empty2" type="MarginContainer" parent="CenterContainer/HBoxContainer/VBoxIcon"]
margin_top = 72.0
margin_right = 65.0
margin_bottom = 104.0
custom_constants/margin_right = 0
custom_constants/margin_top = 32
custom_constants/margin_left = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 69.0
margin_right = 272.0
margin_bottom = 107.0

[node name="ButtonNewGame" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color( 0.4, 0.4, 0.4, 1 )
margin_right = 203.0
margin_bottom = 33.0
custom_styles/focus = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.203922, 0.192157, 0.192157, 1 )
custom_colors/font_color_pressed = Color( 0.984314, 0.901961, 0.00392157, 1 )
text = "NEW GAME"
flat = true

[node name="ButtonCredits" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color( 0.4, 0.4, 0.4, 1 )
margin_top = 37.0
margin_right = 203.0
margin_bottom = 70.0
custom_styles/focus = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.203922, 0.192157, 0.192157, 1 )
custom_colors/font_color_pressed = Color( 0.984314, 0.901961, 0.00392157, 1 )
text = "CREDITS"
flat = true

[node name="ButtonQuit" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color( 0.4, 0.4, 0.4, 1 )
margin_top = 74.0
margin_right = 203.0
margin_bottom = 107.0
custom_styles/focus = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.203922, 0.192157, 0.192157, 1 )
custom_colors/font_color_pressed = Color( 0.984314, 0.901961, 0.00392157, 1 )
text = "QUIT"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 280.0
margin_right = 2.0
margin_bottom = 80.0
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ESCAPE L.A."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control1" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control1"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control1"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control1/CenterContainer"]
margin_left = 234.0
margin_top = 71.0
margin_right = 405.0
margin_bottom = 281.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control1/CenterContainer/VBoxContainer"]
margin_right = 171.0
margin_bottom = 74.0

[node name="CenterContainer" type="VBoxContainer" parent="Control1/CenterContainer/VBoxContainer/MarginContainer"]
margin_right = 171.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="Control1/CenterContainer/VBoxContainer/MarginContainer/CenterContainer"]
margin_right = 171.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "Programming:"
align = 1

[node name="Label2" type="Label" parent="Control1/CenterContainer/VBoxContainer/MarginContainer/CenterContainer"]
margin_top = 29.0
margin_right = 171.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.45098, 0.992157, 0, 1 )
text = "Paul
Azagaya"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="Control1/CenterContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 171.0
margin_bottom = 152.0

[node name="CenterContainer" type="VBoxContainer" parent="Control1/CenterContainer/VBoxContainer/MarginContainer2"]
margin_right = 171.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="Control1/CenterContainer/VBoxContainer/MarginContainer2/CenterContainer"]
margin_right = 171.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "Music:"
align = 1

[node name="Label2" type="Label" parent="Control1/CenterContainer/VBoxContainer/MarginContainer2/CenterContainer"]
margin_top = 29.0
margin_right = 171.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.45098, 0.992157, 0, 1 )
text = "oqlqo_bk
Paul"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="Control1/CenterContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 171.0
margin_bottom = 210.0

[node name="CenterContainer" type="VBoxContainer" parent="Control1/CenterContainer/VBoxContainer/MarginContainer3"]
margin_right = 171.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="Control1/CenterContainer/VBoxContainer/MarginContainer3/CenterContainer"]
margin_right = 171.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "Sound design:"
align = 1

[node name="Label2" type="Label" parent="Control1/CenterContainer/VBoxContainer/MarginContainer3/CenterContainer"]
margin_top = 29.0
margin_right = 171.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.45098, 0.992157, 0, 1 )
text = "Paul"
align = 1

[node name="Control2" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/CenterContainer"]
margin_left = 29.0
margin_top = 34.0
margin_right = 610.0
margin_bottom = 318.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control2/CenterContainer/VBoxContainer"]
margin_right = 581.0
margin_bottom = 174.0

[node name="CenterContainer" type="VBoxContainer" parent="Control2/CenterContainer/VBoxContainer/MarginContainer"]
margin_right = 581.0
margin_bottom = 174.0

[node name="Label" type="Label" parent="Control2/CenterContainer/VBoxContainer/MarginContainer/CenterContainer"]
margin_right = 581.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "Software:"
align = 1

[node name="Label2" type="Label" parent="Control2/CenterContainer/VBoxContainer/MarginContainer/CenterContainer"]
margin_top = 29.0
margin_right = 581.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.45098, 0.992157, 0, 1 )
text = "
Godot
Audacity
Photoshop
Pixelator
Bfxr
dblue crusher"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="Control2/CenterContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 581.0
margin_bottom = 284.0

[node name="CenterContainer" type="VBoxContainer" parent="Control2/CenterContainer/VBoxContainer/MarginContainer2"]
margin_right = 581.0
margin_bottom = 106.0

[node name="Label" type="Label" parent="Control2/CenterContainer/VBoxContainer/MarginContainer2/CenterContainer"]
margin_right = 581.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "Assets:"
align = 1

[node name="Label2" type="Label" parent="Control2/CenterContainer/VBoxContainer/MarginContainer2/CenterContainer"]
margin_top = 29.0
margin_right = 581.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.45098, 0.992157, 0, 1 )
text = "https://bakudas.itch.io/generic-run-n-gun
https://anokolisa.itch.io/legacy-action-pack-park
https://ansimuz.itch.io/industrial-parallax-background
https://ansimuz.itch.io/explosion-animations-pack
https://pluslerin.itch.io/16-bitwar
https://runica.itch.io/more-pixel-menu"
align = 1

[node name="Tween" type="Tween" parent="."]
